<resources>
    <!-- Login-->
    <string name="app_name">TTF Stock Checker</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="welcomeTitle">TTF Stock Checker</string>
    <string name="full_name">Full Name</string>
    <!-- Nav and buttons-->
    <string name="bottom_nav_left">Stock</string>
    <string name="bottom_nav_right">Manage Stock</string>
    <string name="productDescription">Product Description</string>
    <string name="productCode">Product Code</string>
    <string name="productStock">Product Stock</string>
    <string name="addButton">Add</string>
    <string name="updateButton">Update</string>
    <string name="deleteButton">Delete</string>


    <!-- Messages Settings -->
    <string name="font">Font</string>
    <string name="textSize">Text Size</string>
    <string name="brightnessControl">Set Brightness</string>
    <string name="settingsNav">Settings</string>
    <string name="fontSizeText">Font Size</string>
    <string name="saveChanges">Save</string>
    <string name="largeFont">Large</string>
    <string name="defaultFont">Default</string>
    <string name="smallFont">Small</string>
    <string name="clickSounds">Button Click Sounds</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullName">Full Name</string>
    <string name="manageUsers">Manage Users</string>
    <string name="editDelete">Edit/Delete</string>
    <string name="viewStock">View Current Stock</string>
    <string name="itemCodeTv">Item Code</string>
    <string name="itemDescriptionTv">Item Description</string>
    <string name="itemCountTv">Item Count</string>
    <string name="reloadBtn">Reload</string>
    <string name="reloadDbTv">Clear Database and Load from CSV</string>
</resources>