<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stockFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/col"
        android:layout_width="49sp"
        android:layout_height="36sp"
        android:layout_marginStart="8dp"
        android:text="@string/itemCodeTv"
        app:layout_constraintBaseline_toBaselineOf="@+id/col4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/col4"
        android:layout_width="87sp"
        android:layout_height="36sp"
        android:layout_marginStart="8dp"
        android:text="@string/itemDescriptionTv"
        app:layout_constraintStart_toEndOf="@+id/col"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/col5"
        android:layout_width="65sp"
        android:layout_height="36sp"
        android:layout_marginEnd="55dp"
        android:text="@string/itemCountTv"
        app:layout_constraintBaseline_toBaselineOf="@+id/col4"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stockList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/col4">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>
