<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentStockFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stockList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/col1">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="55sp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="Current Stock List"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/col1"
        android:layout_width="45sp"
        android:layout_height="36sp"
        android:layout_marginStart="8dp"
        android:text="@string/itemCodeTv"
        app:layout_constraintBaseline_toBaselineOf="@+id/col2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/col2"
        android:layout_width="87sp"
        android:layout_height="36sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/itemDescriptionTv"
        app:layout_constraintStart_toEndOf="@+id/col1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/col3"
        android:layout_width="48sp"
        android:layout_height="36sp"
        android:layout_marginEnd="8dp"
        android:text="@string/itemCountTv"
        app:layout_constraintBaseline_toBaselineOf="@+id/col2"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>